Feature CELL-26D: Added complete logic for Foraging Ants Simulation